package com.example.eshoey;

/**
 * Interface pre ludi, vypis...
 */
public interface Output {
     String say(String seller);

}
